--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ markdown_extensions:
 pages:
 - Home: index.md
 - IoT SDK's: 
-    - Overview: iot_sdk/iot_overview.md
+    - Overview: iot_sdk/iot_overview2.md
     - Azure IoT SDK: iot_sdk/azure.md
     - PKI SDK: iot_sdk/pki.md
     - Storage SDK: iot_sdk/storage.md
